manifests/word-picker-development-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: word-picker-dev
  labels:
    app: word-picker-dev
    env: development
  annotations:
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"word-picker:dev"},"fieldPath":"spec.template.spec.containers[?(@.name==\"word-picker-dev\")].image"}]'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: word-picker-dev
      env: development
  template:
    metadata:
      labels:
        app: word-picker-dev
        env: development
    spec:
      containers:
      - name: word-picker-dev
        image: tinmancoding/word-picker:v2025.2
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: options-config-configmap
          mountPath: /code/config
      volumes:
      - name: options-config-configmap
        configMap:
          name: word-picker-dev-options
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: word-picker-dev
    env: development
  name: word-picker-dev
spec:
  internalTrafficPolicy: Cluster
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: word-picker-dev
    env: development
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: word-picker-dev
    env: development
  name: word-picker-dev
spec:
  # host: word-picker-dev-landrasi-dev.apps.rm3.7wse.p1.openshiftapps.com
  port:
    targetPort: 5000
  to:
    kind: Service
    name: word-picker-dev
    weight: 100
  wildcardPolicy: None
