manifests/allow-word-picker-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-word-picker-from-word-picker
spec:
  podSelector:
    matchLabels:
      app: word-picker
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: word-picker
